# wxUiEditor

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Claude.md  EULA.TXT  LICENSE  License.txt  README.md  _typos.toml  build_deb_rel.sh  build_gcc_rel.sh  build_rpm_rel.sh  deno.jsonc  file_list.cmake  internal.cmake  nsis_options.cmake.in  wxUiEditor.desktop
cmake/libdeflate/: CMakeLists.txt
python_tests/: CMakeLists.txt  COVERAGE.md  project.wxui  pytest.py  python_tests.wxui  run_pytest.cmd
python_tests/art/: french.png.h  french_png.h_img  normal_png.h  ribbon_button_hybrid.png.h  toggle_button.png.h  wiztest2_png.h
python_tests/cpp/: booktest_dlg.cpp  booktest_dlg.h  choicebook.cpp  choicebook.h  commonctrls.cpp  commonctrls.h  cpptest.natvis  dlgissue_956.cpp  dlgmultitest.cpp  dlgmultitest.h  file_list.cmake  form_toolbar_base.cpp  form_toolbar_base.h  formpaneltest_base.cpp  formpaneltest_base.h  images.cpp  images.h  import_test.cpp  import_test.h  listbook.cpp  listbook.h  mainapp.cpp  mainframe.cpp  mainframe.h  maintestdialog.cpp  maintestdialog.h  mypanel_base.cpp  mypanel_base.h  notebook.cpp  notebook.h  other_ctrls.cpp  other_ctrls.h  pch.h  popupwin.cpp  python_dlg.cpp  python_dlg.h  ribbondlg.cpp  ribbondlg.h  testformpanel.cpp  testformpanel.h  (+7 more)
python_tests/python/: booktest_dlg.py  images.py  main_test_dlg.py  mainframe.py  python_dlg.py  wizard.py
shared/cppmark/: CMakeLists.txt
shared/cppmark/include/: cppmark_html.h
shared/cppmark/licenses/: LICENSE_buffer  LICENSE_utf8proc
shared/cppmark/src/: blocks.cpp  chunk.hxx  cmark-gfm-extension_api.hxx  devnotes.md  footnotes.hxx  houdini_html_e.cpp  inlines.cpp  linked_list.cpp  map.hxx  node.hxx  references.hxx  registry.cpp  scanners.hxx  syntax_extension.cpp  table.hxx
src/doc_viewer/ftsrch/: CMakeLists.txt  compressor.cpp  dictionary.cpp  dictionary.h  ftsrch.h  index_file.cpp  index_file.h  query.h  tokenizer.cpp  tokenizer.h  types.h
src/helptext/data/ftsrch/: CMakeLists.txt  collection.cpp  collection.h  ftsrch.cpp  ftsrch.h  query.cpp  query.h  stemmer.cpp
src/helptext/data/parser/: CMakeLists.txt  decl_parser.cpp  doc_types.h  doxy_commands.cpp  file_parser.cpp  file_parser.h  file_scanner.cpp  file_scanner.h  inherit_graph.cpp  inherit_graph.h  markdown_writer.cpp  markdown_writer.h  run_parser.cpp  symbol_table.cpp  symbol_table.h  zip_reader.cpp  zip_test.cpp  zip_writer.h  (+1 more)
src/ttwx/tests/: CMakeLists.txt  QUICK_START.md  README.md  pch.h  test_string_vector.cpp  test_ttwx.cpp  test_view_vector.cpp
testing/: .srcfiles.yaml  CMakeLists.txt  README.md  mainapp.cpp  pch.cpp  pch.h  wxUiTesting.manifest  wxUiTesting.rc
testing/art/: clr_hourglass_gif.hxx  english.xpm  focus_png.h  french.xpm  japanese.xpm  wiztest_png.h
testing/src/: .srcfiles.yaml  mainapp.cpp  pch.h
testing/src/art/: disabled_png.h  french.xpm
testing/src/custom_ctrls/: split_button.cpp
testing/src/ui/: choicebook_base.cpp  choicebook_base.h  commonctrls.cpp  commonctrls.h  commonctrls_base.cpp  commonctrls_base.h  dlgmultitest.cpp  dlgmultitest.h  dlgmultitest_base.cpp  dlgmultitest_base.h  form_toolbar.cpp  form_toolbar.h  listbook_base.cpp  listbook_base.h  mainframe.cpp  mainframe.h  mainframe_base.cpp  mainframe_base.h  mymenubar.cpp  mymenubar.h  mymenubar_base.cpp  mypanel.cpp  mypanel.h  mypanel_base.cpp  mypanel_base.h  mytoolbar.h  mytoolbar_base.cpp  mytoolbar_base.h  notebook_base.cpp  notebook_base.h  other_ctrls.h  other_ctrls_base.cpp  other_ctrls_base.h  popupwin_base.cpp  ribbondlg.cpp  ribbondlg.h  ribbondlg_base.cpp  ribbondlg_base.h  toolbook_base.cpp  toolbook_base.h  (+8 more)
testing/ui/: choicebook_base.cpp  choicebook_base.h  commonctrls.cpp  commonctrls.h  commonctrls_base.cpp  commonctrls_base.h  dlgmultitest.h  dlgmultitest_base.cpp  dlgmultitest_base.h  listbook_base.cpp  listbook_base.h  mainframe.cpp  mainframe.h  mainframe_base.cpp  mainframe_base.h  mymenubar_base.cpp  mymenubar_base.h  mypanel_base.cpp  mytoolbar.cpp  notebook_base.cpp  notebook_base.h  notebookdlg.cpp  notebookdlg.h  notebookdlg_base.cpp  notebookdlg_base.h  other_ctrls.cpp  other_ctrls_base.cpp  other_ctrls_base.h  popupwin.cpp  popupwin.h  popupwin_base.cpp  popupwin_base.h  ribbondlg_base.cpp  ribbondlg_base.h  toolbook_base.cpp  toolbook_base.h  treebook_base.cpp  treebook_base.h  wizard_base.cpp  wizard_base.h  (+1 more)
tests/quick_test/: CMakeLists.txt  README.md  main_test.wxui  test.wxui
tests/quick_test/cpp/: QuickTest.manifest  QuickTest.rc  file_list.cmake  mainapp.cpp  mainapp.h  pch.h  quick_list.cmake
tests/quick_test/python/: py_main.py
tests/quick_test/ruby/: rb_main.rb
tests/quick_test/xrc/: xrc_main.xrc
tests/sdi/: CMakeLists.txt  COVERAGE.md  file_list.cmake  run_cpp_build.cmd  run_pytest.cmd  run_ruby_test.cmd  sdi_test.wxui  wxui_code.cmake
tests/sdi/cpp/: booktest_dlg.cpp  booktest_dlg.h  commonctrls.cpp  commonctrls.h  cpptest.manifest  cpptest.rc  dlgissue_956.h  dlgissue_960.cpp  dlgissue_960.h  dlgmultitest.cpp  dlgmultitest.h  file_list.cmake  form_toolbar_base.cpp  form_toolbar_base.h  images.cpp  images.h  import_test.cpp  listbook.cpp  mainapp.cpp  mainframe.cpp  mainframe.h  maintestdialog.cpp  maintestdialog.h  popupwin.h  python_dlg.cpp  python_dlg.h  ribbondlg.h  testformpanel.cpp  testformpanel.h  tools_dlg.cpp  tools_dlg.h  treebook.h  wizard.cpp  wizard.h  wxui_code.cmake
tests/sdi/python/: booktest_dlg.py  dlgissue_956.py  dlgissue_960.py  images.py  main_test_dlg.py  mainframe.py  popupwin.py  python_dlg.py  testformpanel.py  tools_dlg.py  wizard.py
tests/sdi/ruby/: booktest_dlg.rb  dlgissue_956.rb  dlgissue_960.rb  images.rb  main_test_dlg.rb  mainframe.rb  tools_dlg.rb  wizard.rb
tests/sdi/xrc/: booktest_dlg.xrc  commonctrls.xrc  dlgissue_956.py  dlgissue_960.xrc  main_test_dlg.xrc  mainframe.xrc  python_dlg.xrc  testformpanel.xrc  wizard.xrc
tools/build_resources/: CMakeLists.txt  CMakePresets.json  main.cpp
wxWidgets/wx_custom/: CMakeLists.txt  wxWidgets.cmake
(+1594 files in other folders)
